--- a/src/app/components/column/column.component.html
+++ b/src/app/components/column/column.component.html
@@ -5,6 +5,6 @@
     <ng-content></ng-content>
   </div>
 
-  <button *ngIf="showAdd" class="add-btn">+ NEW TASK</button>
+  <button *ngIf="showAdd" class="add-btn" (click)="openForm()">+ NEW TASK</button>
 </div>
 
