--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
 <div class="dashboard-container">
 
-  <app-column title="NEW TASK" [showAdd]="true">
+  <!-- <app-column title="NEW TASK" [showAdd]="true">
     <app-task-card 
       title="Design UI Wireframe"
       project="Project Name"
@@ -14,7 +14,27 @@
       project="Project Name"
       date="14/03/2025">
     </app-task-card>
-  </app-column>
+  </app-column> -->
+
+  <app-column 
+        title="NEW TASK" 
+        [showAdd]="true"
+        (addTask)="openForm()">
+
+        <app-task-card 
+          *ngFor="let task of newTasks"
+          [title]="task.title"
+          [project]="task.project"
+          [date]="task.date">
+        </app-task-card>
+
+      </app-column>
+
+      <app-task-form 
+        *ngIf="showForm"
+        (close)="closeForm()"
+        (save)="saveTask($event)">
+</app-task-form>
 
   <app-column title="IN PROGRESS">
     <app-task-card 
