--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,13 @@
 <nav class="navbar">
   <div class="logo">KANBAN FLOW</div>
-  <button class="logout-btn">LOG OUT</button>
+
+  <div class="nav-actions">
+    <button class="add-column-btn" (click)="openColumnForm()">
+      + Add Column
+    </button>
+
+    <button class="logout-btn">
+      LOG OUT
+    </button>
+  </div>
 </nav>
