--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -1,10 +1,65 @@
+
+
+.add-column-btn {
+  height: 40px;
+  padding: 0 15px;
+  background: #222;
+  color: white;
+  border: none;
+  margin: 20px;
+  cursor: pointer;
+}
+
 .dashboard-container {
   display: flex;
-  gap: 25px;
-  padding: 30px;
-  background: #f4f4f4;
-  min-height: 100vh;
-  justify-content: center;
-  /* align-items: center; */
+  gap: 20px;
+  padding: 20px;
+  align-items: flex-start;
+}
 
+/* Overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Popup box */
+.form-container {
+  background: white;
+  padding: 25px;
+  width: 350px;
+  border-radius: 6px;
+}
+
+.form-container input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cancel {
+  background: gray;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+}
+
+.save {
+  background: #222;
+  color: white;
+  border: none;
+  padding: 6px 12px;
 }
